// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic renders 1`] = `
<div>
  <div>
    <div
      class="w-full h-full flex flex-col items-center overflow-auto"
    >
      <div
        class="w-full"
        style="max-width: min(var(--page-max-width), 100vw);"
      >
        <div
          class="editor-container_editor editor-container_editor-1"
        >
          <div
            class="ProseMirror bangle-editor"
            contenteditable="true"
            translate="no"
          >
            <h1>
              Hola
            </h1>
            <p>
              Hello world! I am a test
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when file does not exist 1`] = `
<div>
  <div>
    <div
      class="w-full h-full flex flex-col items-center overflow-auto"
    >
      <div
        class="w-full"
        style="max-width: min(var(--page-max-width), 100vw);"
      >
        <div
          class="h-full flex flex-col justify-center align-middle px-3"
        >
          <h3
            class="sm:text-3xl lg:text-3xl mb-8 text-xl font-bold leading-none"
          >
            🕵️‍♀️‍ Note "
            blah.md
            " was not found
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders when no wsPath is provided 1`] = `
<div>
  <div>
    <div
      class="w-full h-full flex flex-col items-center overflow-auto"
    >
      <div
        class="w-full"
        style="max-width: min(var(--page-max-width), 100vw);"
      >
        <div>
          Nothing was found here
        </div>
      </div>
    </div>
  </div>
</div>
`;
